# local-knowledge-engine

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.agent/context/: current_task.md
.ai/context/: project_overview.md
.ai/decisions/: 001-repository-structure.md  002-storage-architecture.md  003-embedding-strategy.md  004-metadata-strategy.md  005-error-handling-strategy.md  006-sync-execution.md  007-ai-provider-abstraction.md  008-configuration-hierarchy.md  009-plugin-architecture-deferred.md  010-graph-storage-abstraction.md
.ai/standards/: architecture_rules.md  commit_and_branching.md  definition_of_done.md  dependency_management.md  logging_standards.md  python_style.md  testing_standards.md
.ai/tasks/: backlog.md
.github/workflows/: ci.yml
docs/: user_guide.md
src/lke/: __init__.py
src/lke/api/: app.py  errors.py  models.py
src/lke/api/routers/: ask.py  search.py
src/lke/application/services/: enrichment_pipeline.py  eval_service.py  indexing_pipeline.py  rag_service.py  search_service.py  watcher_service.py
src/lke/cli/: app.py  console.py  container.py  formatting.py
src/lke/cli/commands/: ask.py  enrich.py  eval.py  index.py  init.py  search.py  serve.py  watch.py
src/lke/config/: __init__.py  defaults.py  exceptions.py  hierarchy.py  loader.py  models.py  validator.py
src/lke/domain/: __init__.py  exceptions.py
src/lke/domain/events/: __init__.py  (+4 more)
tests/api/: test_ask.py  test_search.py
tests/eval/: dataset.yaml  related_notes_dataset.yaml
tests/eval/corpus/: apollo_11.md  apple_company.md  apple_fruit.md  baking_bread.md  bank_finance.md  bank_river.md  black_holes.md  crypto_basics.md  devops_cicd.md  docker_containers.md  emergency_fund.md  french_revolution.md  git_rebase.md  gpu_arch.md  gradient_descent_long.md  gradient_descent_short.md  index_funds.md  industrial_revolution.md  java_coffee.md  java_lang.md  linux_kernel.md  mechanical_keyboards.md  note1.md  note2.md  obsidian_app.md  pomodoro.md  python_language.md  python_snake.md  quick_bread.md  special_relativity.md  time_blocking.md  zettelkasten.md
tests/unit/: test_basic.py
tests/unit/cli/: test_app.py  test_container.py  test_index.py  test_init.py  test_search.py
tests/unit/config/: test_config.py
tests/unit/domain/: test_events.py  test_exceptions.py  test_models.py  test_protocols.py
(+50 files in other folders)
