[project]
name = "lke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kanishk-C", email = "kanishkc01@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "lancedb",
    "loguru",
    "ollama",
    "pydantic",
    "pyyaml>=6.0.3",
    "rich",
    "sentence-transformers",
    "tomlkit",
    "typer",
    "uvicorn>=0.51.0",
    "watchdog",
]

[project.scripts]
lke = "lke.cli.app:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore:table_names\\(\\) is deprecated:DeprecationWarning",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
